<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Garden</string>
    <string name="zaloguj">Zaloguj</string>
    <string name="zarejestruj">Zarejestruj</string>
    <string name="zaloguj_zarejestruj">ZALOGUJ SIĘ</string>
    <string name="has_o">Hasło</string>
    <string name="nazwa_u_ytkownika">Nazwa użytkownika</string>
    <string name="repeat_password">Powtórz hasło</string>
    <string name="password">Hasło</string>
    <string name="user_name">Nazwa użytkownika</string>
    <string name="register_baner">REJESTRACJA</string>
    <string name="moje_powiadomienia_button_text">Moje powiadomienia</string>
    <string name="przykladowa_nazwa_ogrodka">Nazwa1</string>
    <string name="txt_status">Status:</string>
    <string name="status_txt">Nie zasadzone</string>
    <string name="btn_obserwacje">O</string>
    <string name="zmien_status_btn">ZS</string>
    <string name="txt_Twoj_Ogrodek">Twój Ogródek</string>
    <string name="wybierz_co_sadzisz">Wybierz co chcesz zasiać/zasadzić w swoim ogrodku!</string>
    <string name="wyszukiwarka_txt">Możesz tutaj wyszukać</string>
    <string name="pokaz_info_txt">Więcej informacji</string>
    <string name="dodaj_btn">Dodaj</string>
    <string name="nazwa_rosliny_txt">Nazwa_rosliny1</string>
    <string name="dodaj_nasiona_txt">Dodaj rośliny do ogródka</string>
    <string name="Status_btn">Status:</string>
    <string name="Miejsce_btn">Miejsce:</string>
    <string name="powiadomienia_btn">P</string>
    <string name="usun_rosline_btn">U</string>
    <string name="sql_create_rosliny">
        CREATE TABLE IF NOT EXISTS "rosliny" ("id_r"	integer PRIMARY KEY AUTOINCREMENT UNIQUE,"nazwa"	varchar(100) NOT NULL,"odmiana"	tinytext NOT NULL,"okres_siewu_poczatek"	datetime NOT NULL,"okres_siewu_koniec"	datetime NOT NULL,"okres_zbioru_poczatek"	datetime NOT NULL,"okres_zbioru_koniec"	datetime NOT NULL,"czestotliwosc_podlewania"	int NOT NULL);</string>
    <string name="sql_create_uzytkownicy"> CREATE TABLE IF NOT EXISTS "uzytkownicy"
        ("id_u" INTEGER NOT NULL PRIMARY KEY AUTOINCREMENT UNIQUE,
        "nazwa" varchar(30) NOT NULL,
        "login" varchar(30) NOT NULL UNIQUE,
        "haslo" char(32) NOT NULL);</string>
    <string name="sql_create_zasady">CREATE TABLE IF NOT EXISTS "zasady" ("id_z"	integer PRIMARY KEY AUTOINCREMENT UNIQUE,"id_rosliny"	int NOT NULL,"tresc"	varchar(1000) NOT NULL,CONSTRAINT "zasady_ibfk_1" FOREIGN KEY("id_rosliny") REFERENCES "rosliny"("id_r") ON DELETE CASCADE ON UPDATE CASCADE);</string>
    <string name="sql_create_ogrodki">CREATE TABLE IF NOT EXISTS "ogrodki" ("id_og"	integer PRIMARY KEY AUTOINCREMENT UNIQUE,"id_uzytkownika"	integer NOT NULL,"nazwa"	varchar(100) NOT NULL,"adres"	varchar(100) NOT NULL,CONSTRAINT "ogrodki_ibfk_1" FOREIGN KEY("id_uzytkownika") REFERENCES "uzytkownicy"("id_u") ON DELETE CASCADE ON UPDATE CASCADE);</string>
    <string name="sql_create_egzemplarze">CREATE TABLE IF NOT EXISTS "egzemplarze" ("id_e"	integer PRIMARY KEY AUTOINCREMENT UNIQUE,"id_ogrodka"	integer NOT NULL,"id_rosliny"	integer NOT NULL,"miejsce"	varchar(100) NOT NULL,"status"	TEXT NOT NULL DEFAULT "NZ" CHECK(`status` IN (\"NZ\",\"Z\",\"DZ\",\"ZE\")),"data_zmiany_statusu"	datetime NOT NULL DEFAULT CURRENT_TIMESTAMP,FOREIGN KEY("id_ogrodka") REFERENCES "ogrodki"("id_og") ON DELETE CASCADE ON UPDATE CASCADE,CONSTRAINT "miejsce_w_ogrodku" UNIQUE("id_ogrodka","miejsce"),CONSTRAINT "egzemplarze_ibfk_1" FOREIGN KEY("id_rosliny") REFERENCES "rosliny"("id_r") ON DELETE CASCADE ON UPDATE CASCADE);</string>
    <string name="sql_create_powiadomienia">CREATE TABLE IF NOT EXISTS "powiadomienia" ("id_p"	integer PRIMARY KEY AUTOINCREMENT UNIQUE,"id_egzemplarza"	int DEFAULT NULL,"id_ogrodka"	int DEFAULT NULL,"tresc"	varchar(400) NOT NULL,"data_powiadomienia"	datetime NOT NULL,CONSTRAINT "powiadomienia_ibfk_1" FOREIGN KEY("id_ogrodka") REFERENCES "ogrodki"("id_og") ON DELETE CASCADE ON UPDATE CASCADE,CONSTRAINT "powiadomienia_ibfk_2" FOREIGN KEY("id_egzemplarza") REFERENCES "egzemplarze"("id_e") ON DELETE CASCADE ON UPDATE CASCADE);</string>
    <string name="sql_create_obserwacje">CREATE TABLE IF NOT EXISTS "obserwacje" ("id_o"	integer PRIMARY KEY AUTOINCREMENT UNIQUE,"id_egzemplarza"	int NOT NULL,"tresc"	varchar(1000) NOT NULL,"data_obserwacji"	datetime NOT NULL DEFAULT CURRENT_TIMESTAMP,CONSTRAINT "obserwacje_ibfk_1" FOREIGN KEY("id_egzemplarza") REFERENCES "egzemplarze"("id_e") ON DELETE CASCADE ON UPDATE CASCADE);</string>
    <string name="sql_cala_baza">
        CREATE TABLE IF NOT EXISTS "rosliny" (
	"id_r"	integer PRIMARY KEY AUTOINCREMENT UNIQUE,
	"nazwa"	varchar(100) NOT NULL,
	"odmiana"	tinytext NOT NULL,
	"okres_siewu_poczatek"	datetime NOT NULL,
	"okres_siewu_koniec"	datetime NOT NULL,
	"okres_zbioru_poczatek"	datetime NOT NULL,
	"okres_zbioru_koniec"	datetime NOT NULL,
	"czestotliwosc_podlewania"	int NOT NULL
);
DROP TABLE IF EXISTS "zasady";
CREATE TABLE IF NOT EXISTS "zasady" (
	"id_z"	integer PRIMARY KEY AUTOINCREMENT UNIQUE,
	"id_rosliny"	int NOT NULL,
	"tresc"	varchar(1000) NOT NULL,
	CONSTRAINT "zasady_ibfk_1" FOREIGN KEY("id_rosliny") REFERENCES "rosliny"("id_r") ON DELETE CASCADE ON UPDATE CASCADE
);
DROP TABLE IF EXISTS "ogrodki";
CREATE TABLE IF NOT EXISTS "ogrodki" (
	"id_og"	integer PRIMARY KEY AUTOINCREMENT UNIQUE,
	"id_uzytkownika"	integer NOT NULL,
	"nazwa"	varchar(100) NOT NULL,
	"adres"	varchar(100) NOT NULL,
	CONSTRAINT "ogrodki_ibfk_1" FOREIGN KEY("id_uzytkownika") REFERENCES "uzytkownicy"("id_u") ON DELETE CASCADE ON UPDATE CASCADE
);
DROP TABLE IF EXISTS "obserwacje";
CREATE TABLE IF NOT EXISTS "obserwacje" (
	"id_o"	integer PRIMARY KEY AUTOINCREMENT UNIQUE,
	"id_egzemplarza"	int NOT NULL,
	"tresc"	varchar(1000) NOT NULL,
	"data_obserwacji"	datetime NOT NULL DEFAULT CURRENT_TIMESTAMP,
	CONSTRAINT "obserwacje_ibfk_1" FOREIGN KEY("id_egzemplarza") REFERENCES "egzemplarze"("id_e") ON DELETE CASCADE ON UPDATE CASCADE
);
DROP TABLE IF EXISTS "powiadomienia";
CREATE TABLE IF NOT EXISTS "powiadomienia" (
	"id_p"	intEGER PRIMARY KEY AUTOINCREMENT UNIQUE,
	"id_egzemplarza"	int DEFAULT NULL,
	"id_ogrodka"	int DEFAULT NULL,
	"tresc"	varchar(400) NOT NULL,
	"data_powiadomienia"	datetime NOT NULL,
	CONSTRAINT "powiadomienia_ibfk_1" FOREIGN KEY("id_ogrodka") REFERENCES "ogrodki"("id_og") ON DELETE CASCADE ON UPDATE CASCADE,
	CONSTRAINT "powiadomienia_ibfk_2" FOREIGN KEY("id_egzemplarza") REFERENCES "egzemplarze"("id_e") ON DELETE CASCADE ON UPDATE CASCADE
);
DROP TABLE IF EXISTS "egzemplarze";
CREATE TABLE IF NOT EXISTS "egzemplarze" (
	"id_e"	integer PRIMARY KEY AUTOINCREMENT UNIQUE,
	"id_ogrodka"	integer NOT NULL,
	"id_rosliny"	integer NOT NULL,
	"miejsce"	varchar(100) NOT NULL,
	"status"	TEXT NOT NULL DEFAULT "NZ" CHECK(`status` IN ("NZ","Z","DZ","ZE")),
	"data_zmiany_statusu"	datetime NOT NULL DEFAULT CURRENT_TIMESTAMP,
	FOREIGN KEY("id_ogrodka") REFERENCES "ogrodki"("id_og") ON DELETE CASCADE ON UPDATE CASCADE,
	CONSTRAINT "miejsce_w_ogrodku" UNIQUE("id_ogrodka","miejsce"),
	CONSTRAINT "egzemplarze_ibfk_1" FOREIGN KEY("id_rosliny") REFERENCES "rosliny"("id_r") ON DELETE CASCADE ON UPDATE CASCADE
);
DROP TABLE IF EXISTS "uzytkownicy";
CREATE TABLE IF NOT EXISTS "uzytkownicy" (
	"id_u"	INTEGER NOT NULL PRIMARY KEY AUTOINCREMENT UNIQUE,
	"nazwa"	varchar(30) NOT NULL,
	"login"	varchar(30) NOT NULL UNIQUE,
	"haslo"	char(32) NOT NULL
);</string>
    <string name="sql_dodaj_wartosci_roslin">INSERT INTO \"rosliny\" (\"nazwa\",\"odmiana\",\"okres_siewu_poczatek\",\"okres_siewu_koniec\",\"okres_zbioru_poczatek\",\"okres_zbioru_koniec\",\"czestotliwosc_podlewania\") VALUES
                (\"Marchew\",\"wczesna\",\"2020-03-15 00:00:00\",\"2020-04-15 00:00:00\",\"2020-06-01 00:00:00\",\"2020-07-30 00:00:00\",3),\n
                (\"Pietruszka\",\"naciowa Mooskrause 2 - kędzieżawa\",\"2020-03-01 00:00:00\",\"2020-05-30 00:00:00\",\"2020-05-30 00:00:00\",\"2020-12-31 00:00:00\",7),\n
                (\"Burak\",\"Cukrowy podłużny Opolski\",\"2020-03-15 00:00:00\",\"2020-04-15 00:00:00\",\"2020-07-15 00:00:00\",\"2020-09-30 00:00:00\",14),\n
                (\"Koper\",\"ogrodowy Sprinter\",\"2020-03-01 00:00:00\",\"2020-04-30 00:00:00\",\"2020-05-01 00:00:00\",\"2020-10-30 00:00:00\",1),\n
                (\"Dynia\",\"olbrzymia Uchiki Kuri\",\"2020-05-01 00:00:00\",\"2020-05-30 00:00:00\",\"2020-08-01 00:00:00\",\"2020-09-30 00:00:00\",2);</string>
    <string name="sql_dodaj_wartosci_uzytkownicy">INSERT INTO \"uzytkownicy\" (\"id_u\",\"nazwa\",\"login\",\"haslo\")
        VALUES (1,\"Magdalena\",\"Madzia\",\"AA1420F182E88B9E5F874F6FBE7459291E8F4601\"),\n
                (2,\"Filip\",\"FFFFX\",\"6BB4837EB74329105EE4568DDA7DC67ED2CA2AD9\"),\n
                (3,\"Noname\",\"tester\",\"8DCDD69CE7D121DE8013062AEAEB2A148910D50E\"),\n
                (5,\"name\",\"tester2\",\"6D45FD76D5E9C6A404E39C25106A7F032659ACB8\"),\n
                (6,\"Tester3\",\"LoginTestera\",\"529443E73B0ACE7DF5E7AA47FB366E701F0754FD\");</string>
    <string name="sql_dodaj_wartosci_zasady">INSERT INTO \"zasady\" (\"id_z\",\"id_rosliny\",\"tresc\") VALUES (1,5,\"Stanowisko: słoneczne, z podłożem przepuszczalnym, próchnicznym i nieprzesychającym\"),\n
                (2,5,\"gatunek nie jest bowiem odporny na spadki temperatury poniżej 0°C\"),\n
                (3,3,\"Stanowisko: Burak lubi rosnący w miejscu z dostępem do światła, chociaż stanowisko pod uprawę tych warzyw nie powinno znajdować się w pełnym słońcu. Jest to roślina, która najlepiej czuje się na glebie wilgotnej i lekkiej. Optymalny dla jego rozwoju jest obojętny odczyn pH podłoża. Do uprawy buraka Opolskiego w miarę możliwości wybieramy mniej kamieniste miejsca.\"),\n
                (4,3,\"Rozstawa: Nasiona buraka Opolskiego wysiewamy w rzędach oddalonych o 30-40 centymetrów.\"),\n
                (5,2,\"Warunki uprawy: pietruszkę naciową należy uprawiać na glebach lekkich, obojętnych i bogatych w próchnicę. \");\n</string>
    <string name="sql_dodaj_wartosci_ogrodki">INSERT INTO \"ogrodki\" (\"id_og\",\"id_uzytkownika\",\"nazwa\",\"adres\") VALUES (0,1,\"Ogródek warzywny - nowy\",\"ul. Kolejowa 22 Borków\"),\n
                (1,1,\"Ogródek warzywny\",\"ul. Kolejowa 22 Borków\"),\n
                (2,2,\"Ogródek1\",\"ul. Majowa 13 Malczyce\"),\n
                (3,1,\"Ogródek owocowy\",\"ul.Kolejowa 22 Borków\"),\n
                (5,5,\"Ogródek A4\",\"ul. Brzoskwiniowa 6 Wrocław\"),\n
                (8,1,\"Ogrodek mamy\",\"ul. Wrocławska 2 Wrocław\"),\n
                (14,1,\"Ogródek warzywny - nowy NOWY nowy Nowy nowyyy nowyyyyy 2\",\"ul. Kolejowa 22 Borków\");\n</string>
    <string name="sql_dodaj_wartosci_egzemplarze">INSERT INTO \"egzemplarze\" (\"id_e\",\"id_ogrodka\",\"id_rosliny\",\"miejsce\",\"status\",\"data_zmiany_statusu\") VALUES (1,1,1,\"A1\",\"NZ\",\"2020-05-03 12:10:10\"),\n
                (2,1,2,\"A2\",\"NZ\",\"2020-05-03 12:10:10\"),\n
                (3,2,1,\"22\",\"NZ\",\"2020-05-03 12:10:10\"),\n
                (4,2,2,\"NZ\",\"NZ\",\"2020-05-03 12:10:10\"),\n
                (8,2,2,\"A3\",\"NZ\",\"2020-05-03 12:10:10\"),\n
                (10,1,1,\"A3\",\"NZ\",\"2020-05-03 19:11:47\"),\n
                (15,1,1,\"A7\",\"NZ\",\"2020-05-03 21:10:33\"),\n
                (17,1,3,\"A8\",\"NZ\",\"2020-05-04 13:52:57\"),\n
                (22,1,3,\"A21\",\"ZE\",\"2020-05-08 20:59:24\");\n</string>
</resources>